--- a/trunk/adopse-ergasia-mysqlbackup/adopse-ergasia-mysqlbackup.vbproj
+++ b/trunk/adopse-ergasia-mysqlbackup/adopse-ergasia-mysqlbackup.vbproj
@@ -94,6 +94,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
