--- a/trunk/adopse-ergasia-mysqlbackup/adopse-ergasia-mysqlbackup.vbproj
+++ b/trunk/adopse-ergasia-mysqlbackup/adopse-ergasia-mysqlbackup.vbproj
@@ -43,11 +43,11 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Desktop\MySqlBackup.NET 2.0.6\v2.0\MySql.Data.dll</HintPath>
+      <HintPath>Libraries\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySqlBackup, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Desktop\MySqlBackup.NET 2.0.6\v2.0\MySqlBackup.dll</HintPath>
+      <HintPath>Libraries\MySqlBackup.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
