--- a/trunk/MyService1/MyService1/MyService1.vbproj
+++ b/trunk/MyService1/MyService1/MyService1.vbproj
@@ -62,6 +62,9 @@
     <Reference Include="AppLimit.CloudComputing.SharpBox.MockProvider">
       <HintPath>..\packages\AppLimit.CloudComputing.SharpBox.1.2.0.542\lib\net40-full\AppLimit.CloudComputing.SharpBox.MockProvider.dll</HintPath>
     </Reference>
+    <Reference Include="BoxApi.V2">
+      <HintPath>..\packages\Box.v2.SDK.2.1\lib\net40\BoxApi.V2.dll</HintPath>
+    </Reference>
     <Reference Include="DiffieHellman">
       <HintPath>..\packages\DiffieHellman.1.0.0\lib\net40\DiffieHellman.dll</HintPath>
     </Reference>
@@ -77,11 +80,17 @@
     <Reference Include="MySqlBackup">
       <HintPath>..\packages\MySqlBackup.NET.2.0.6\lib\net40\MySqlBackup.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.9\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json.Net40">
       <HintPath>..\packages\AppLimit.CloudComputing.SharpBox.1.2.0.542\lib\net40-full\Newtonsoft.Json.Net40.dll</HintPath>
     </Reference>
     <Reference Include="Org.Mentalis.Security">
       <HintPath>..\packages\Org.Mentalis.Security.1.0.0\lib\net40\Org.Mentalis.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
