--- a/trunk/MyService1/MyService1/packages.config
+++ b/trunk/MyService1/MyService1/packages.config
@@ -4,10 +4,20 @@
   <package id="Box.v2.SDK" version="2.1" targetFramework="net40" />
   <package id="DiffieHellman" version="1.0.0" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
+  <package id="Google.Apis" version="1.9.0" targetFramework="net40" />
+  <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net40" />
+  <package id="Google.Apis.Core" version="1.9.0" targetFramework="net40" />
+  <package id="Google.Apis.Drive.v2" version="1.9.0.1550" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.5" targetFramework="net40" />
   <package id="MySqlBackup.NET" version="2.0.6" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
   <package id="Org.Mentalis.Security" version="1.0.0" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net40" />
   <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net45" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="net40" />
 </packages>
