Προστέθηκε η δυνατότητα ανεβάσματος των αρχείων σε συγκεκριμένο φάκελο!

--- a/trunk/OneDriveLogin/OneDriveLogin/OneDriveLogin.vbproj
+++ b/trunk/OneDriveLogin/OneDriveLogin/OneDriveLogin.vbproj
@@ -49,6 +49,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging">
+      <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Live, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\LiveSDK.5.6\lib\net45\Microsoft.Live.dll</HintPath>
     </Reference>
