--- a/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
+++ b/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
@@ -101,6 +101,7 @@
     <Compile Include="BoxAuth.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CloudService .vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +109,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GoogleDrive.vb" />
     <Compile Include="OneDriveBrowser.Designer.vb">
       <DependentUpon>OneDriveBrowser.vb</DependentUpon>
     </Compile>
