--- a/trunk/MySQLBackUp/MySQLBackUp/app.config
+++ b/trunk/MySQLBackUp/MySQLBackUp/app.config
@@ -8,4 +8,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+  </connectionStrings>
 </configuration>
