Update: 1)Created :             i)MyBoxClient 2)Altered :             i)DropBox.vb             ii)BoxAuth.vb             iii)SftpForm.vb             iv)MyNewSftpClient.vb

--- a/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
+++ b/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
@@ -192,6 +192,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GoogleDrive.vb" />
+    <Compile Include="MyBoxClient.vb" />
     <Compile Include="OneDriveBrowser.Designer.vb">
       <DependentUpon>OneDriveBrowser.vb</DependentUpon>
     </Compile>
