Zip for encryption added

--- a/trunk/MySQLBackUp/MySQLBackUp/packages.config
+++ b/trunk/MySQLBackUp/MySQLBackUp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AppLimit.CloudComputing.SharpBox" version="1.2.0.542" targetFramework="net40" />
   <package id="Box.v2.SDK" version="2.1" targetFramework="net40" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net40" />
   <package id="Google.Apis" version="1.9.1" targetFramework="net40" />
   <package id="Google.Apis.Auth" version="1.9.1" targetFramework="net40" />
   <package id="Google.Apis.Core" version="1.9.1" targetFramework="net40" />
