Update: 1)multiple emails         2)social media redirect         3)no multiple users with the same name allowed

--- a/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
+++ b/trunk/MySQLBackUp/MySQLBackUp/MySQLBackUp.vbproj
@@ -308,6 +308,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\twitter_50.jpg" />
+    <None Include="Resources\Facebook-04.png" />
+    <None Include="Resources\Google-Plus-Logo-50x50.png" />
     <Content Include="Resources\Microsoft.Win32.TaskScheduler.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
