Update : 1) Created : MyBox.vb , MyDropBox.vb , MySFTPClient.vb          2)Sub addToMail in Module1.vb which builds the mail message

--- a/trunk/Base Application  For The Process/Base Application  For The Process/Base Application  For The Process.vbproj
+++ b/trunk/Base Application  For The Process/Base Application  For The Process/Base Application  For The Process.vbproj
@@ -182,6 +182,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="MyBox.vb" />
+    <Compile Include="MyDropBox.vb" />
+    <Compile Include="MySFTPClient.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
