--- a/trunk/MySQLBackUp/MySQLBackUp/packages.config
+++ b/trunk/MySQLBackUp/MySQLBackUp/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net40" />
+  <package id="MySql.Data" version="6.9.5" targetFramework="net40" />
+  <package id="MySqlBackup.NET" version="2.0.6" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net40" />
   <package id="RestSharp" version="105.0.1" targetFramework="net40" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net40" />
